--- a/Untitled-8.html
+++ b/Untitled-8.html
@@ -5,6 +5,9 @@
     </head>
     <body>
         <em>마왕족발</em>을 먹었다.
-        <br>맛있었다. 근데 <mark>매웠다.</mark>
+        <hr><br>맛있었다. 근데 <mark>매웠다.</mark>
+        <hr><br>맛있었다. 근데 <mark>매웠다.</mark>
+        <hr><br>맛있었다. 근데 <mark>매웠다.</mark>
+        <hr><br>맛있었다. 근데 <mark>매웠다.</mark>
         <br>방금 다 치우고 왔다. <small>사실 아직 더 남았다 히히</small>
     </body>
